# sftpkibanasample

./: .gitignore  README.md  main.py  pyproject.toml  sftp.env  sftp.yaml  sftp_v2.py
sftp_tool/: __init__.py  cli.py  config.py  inventory.py  main.py  pgmeta.py  special_ops.py  uploader.py
