[project]
name = "sftp-tool"
version = "0.1.0"
description = "Multi-environment SFTP uploader with Elasticsearch/SSH utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
reporting = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
